--- a/headhunter/accounts/templates/registration/login.html
+++ b/headhunter/accounts/templates/registration/login.html
@@ -13,4 +13,6 @@
     
     {% include 'common/login_form.html' %}
 
+    <script src="{% static 'js/login_api_script.js' %}"></script>
+
 {% endblock content %}
