--- a/headhunter/app/templates/common/navbar.html
+++ b/headhunter/app/templates/common/navbar.html
@@ -8,7 +8,7 @@
         <div class="navbar-nav">
           {% if user.is_authenticated %}
           
-            <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+            <a class="nav-link" id="logoutBtn" href="{% url 'logout' %}">Выйти</a>
           
           {% else %}
 
