--- a/headhunter/app/templates/common/navbar.html
+++ b/headhunter/app/templates/common/navbar.html
@@ -1,22 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">HeadHunter</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          {% if user.is_authenticated %}
-          
-            <a class="nav-link" id="logoutBtn" href="{% url 'logout' %}">Выйти</a>
-          
-          {% else %}
+        <a class="navbar-brand" href="#">HeadHunter</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                {% if user.is_authenticated %}
 
-            <a class="nav-link" aria-current="page" href="{% url 'login' %}">Войти</a>
-            <a class="nav-link" href="#">Зарегистрироваться</a>
+                    <a class="nav-link" id="logoutBtn" href="{% url 'logout' %}">Выйти</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'create_summary' %}">Создать резюме</a>
 
-          {% endif %}
+                {% else %}
+
+                    <a class="nav-link" aria-current="page" href="{% url 'login' %}">Войти</a>
+                    <a class="nav-link" href="#">Зарегистрироваться</a>
+                {% endif %}
+            </div>
         </div>
-      </div>
     </div>
 </nav>
