--- a/headhunter/app/templates/common/navbar.html
+++ b/headhunter/app/templates/common/navbar.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="#">HeadHunter</a>
@@ -5,17 +7,23 @@
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="display: block !important">
             <div class="navbar-nav">
                 {% if user.is_authenticated %}
 
-                    <a class="nav-link" id="logoutBtn" href="{% url 'logout' %}">Выйти</a>
-                    <a class="nav-link" aria-current="page" href="{% url 'create_summary' %}">Создать резюме</a>
+                    <div class="d-flex justify-content-between w-100">
+                        <div class="d-flex align-items-center">
+                            <a class="nav-link" id="logoutBtn" href="{% url 'logout' %}">Выйти</a>
+                            <a class="nav-link" href="{% url 'create_summary' %}">Создать резюме</a>
+                        </div>
+                        <a class="nav-link" href="{% url 'user_detail' %}"><img src="{% static 'img/user_icon.png' %}" alt="" style="filter: invert(1); width: 40px;"></a>
+                    </div>
 
                 {% else %}
-
+                    
                     <a class="nav-link" aria-current="page" href="{% url 'login' %}">Войти</a>
                     <a class="nav-link" href="{% url 'register' %}">Зарегистрироваться</a>
+                    
                 {% endif %}
             </div>
         </div>
