--- a/headhunter/app/templates/common/navbar.html
+++ b/headhunter/app/templates/common/navbar.html
@@ -15,6 +15,7 @@
                         <div class="d-flex align-items-center">
                             <a class="nav-link" id="logoutBtn" href="{% url 'logout' %}">Выйти</a>
                             <a class="nav-link" href="{% url 'create_summary' %}">Создать резюме</a>
+                            <a class="nav-link" href="{% url 'create_vacancy' %}">Создать вакансию</a>
                         </div>
                         <a class="nav-link" href="{% url 'user_detail' %}"><img src="{% static 'img/user_icon.png' %}" alt="" style="filter: invert(1); width: 40px;"></a>
                     </div>
