Исправил вывод списка резюме на общей странице и странице пользователя

--- a/headhunter/accounts/templates/user/detail.html
+++ b/headhunter/accounts/templates/user/detail.html
@@ -6,7 +6,9 @@
 
 
 {% block content %}
+    
     <br>
+    
     <div>
         <div class="w-75">
             <div class="d-flex align-items-center">
@@ -34,4 +36,16 @@
             </div>
         </div>
     </div>
+
+    <br>
+
+    {% if summaries %}
+        {% include 'partials/summary/list_summary.html' with title_text="Ваши резюме" %}
+    {% endif %}
+    <div class="paginate mt-5">
+        {% if is_paginated %}
+                {% include 'common/pagination.html' %}
+        {% endif %}
+    </div>
+    
 {% endblock %}
