--- a/headhunter/app/templates/partials/summary/list_summary.html
+++ b/headhunter/app/templates/partials/summary/list_summary.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center">Список Резюме</h1>
+<h1 style="text-align: center">{{ title_text }}</h1>
 <div>
     {% for summary in summaries %}
         <div class="col mt-4">
