--- a/headhunter/app/templates/partials/summary/work_expirience.html
+++ b/headhunter/app/templates/partials/summary/work_expirience.html
@@ -1,5 +1,7 @@
 <div id="work_div" class="w-50 d-none">
-    <hr style="margin: 40px 0">
+    <hr style="margin: 20px 0">
+    <h3>Добавить опыт работы</h3>
+    <br>
     <form id="work_experience_form" method="post">
         {% csrf_token %}
         <div class="mb-3">
