--- a/headhunter/accounts/templates/user/detail.html
+++ b/headhunter/accounts/templates/user/detail.html
@@ -9,20 +9,19 @@
     
     <br>
     
-    <div>
-        <div class="w-75">
+    <div class="w-75 m-auto">
+        <div style="border-radius: 40px" class="card border-secondary p-3 m-auto">
             <div class="d-flex align-items-center">
                 <div>
                     {% if user.image %}
-                        <img style="width: 200px; height: 200px" src="{{ user.image.url }}" class="card-img"
-                             alt="...">
+                        <img style="width: 250px; border-radius: 40px; border: 2px solid #8b8b8b;" src="{{ user.image.url }}" class="card-img" alt="...">
                     {% else %}
-                        <img style="width: 200px; height: 200px" src="{% static 'img/user.png' %}" class="card-img"
-                             alt="...">
+                        <img style="width: 250px; border-radius: 40px; border: 2px solid #8b8b8b;" src="{% static 'img/user.png' %}" class="card-img" alt="...">
                     {% endif %}
                 </div>
                 <div class="ms-5">
                     <h1 class="card-text">{{ user.username }} {% if user.is_company %}(Работадатель){% else %}(Соискатель){% endif %}</h1>
+                    <hr style="margin: 10px 0 !important;">
                     <div class="mt-3">
                         <h6 class="text-muted fs-4">Контактые данные</h6>
                         <div class="fs-6">
@@ -35,17 +34,17 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <br>
+        <br>
 
-    {% if summaries %}
-        {% include 'partials/summary/list_summary.html' with title_text="Ваши резюме" %}
-    {% endif %}
-    <div class="paginate mt-5">
-        {% if is_paginated %}
-                {% include 'common/pagination.html' %}
+        {% if summaries %}
+            {% include 'partials/summary/list_summary.html' with title_text="Ваши резюме" %}
         {% endif %}
+        <div class="paginate mt-5">
+            {% if is_paginated %}
+                    {% include 'common/pagination.html' %}
+            {% endif %}
+        </div>
     </div>
     
 {% endblock %}
