--- a/headhunter/app/templates/partials/summary/summary_form.html
+++ b/headhunter/app/templates/partials/summary/summary_form.html
@@ -55,46 +55,43 @@
     <input value="{{ form.salary.value }}" type="number" name="salary" class="form-control" id="salary">
     <span class="alert-danger">{{ form.salary.errors }}</span>
 </div>
-<br>
-<div class="d-flex justify-content-around">
-    <button id="experience" class="btn btn-secondary" type="button">Добавить опыт работы</button>
-    <button id="education" class="btn btn-secondary" type="button">Добавить образование</button>
-</div>
-<br>
 <select multiple name="work_experience" id="work_experience" class="form-select d-none" size="3"
         aria-label="size 3 select example">
 </select>
-<br>
 <select multiple name="education" id="education_work" class="form-select d-none" size="3"
         aria-label="size 3 select example">
 </select>
-<br>
 <div>
     <label for="salary" class="form-label">Опубликовать резюме?</label>
 </div>
 {% if form.publication.value %}
 
-    <div class="btn-group w-50" role="group" aria-label="Basic radio toggle button group">
-        <input value="False" type="radio" class="btn-check" name="publication" id="btnradio1" autocomplete="off">
-        <label class="btn btn-outline-secondary" for="btnradio1">Нет</label>
-
+    <div class="btn-group w-100" role="group" aria-label="Basic radio toggle button group">
         <input value="True" type="radio" class="btn-check" name="publication" id="btnradio2" autocomplete="off" checked>
         <label class="btn btn-outline-secondary" for="btnradio2">Да</label>
+        
+        <input value="False" type="radio" class="btn-check" name="publication" id="btnradio1" autocomplete="off">
+        <label class="btn btn-outline-secondary" for="btnradio1">Нет</label>
     </div>
 
 {% else %}
 
-    <div class="btn-group w-50" role="group" aria-label="Basic radio toggle button group">
-        <input value="False" type="radio" class="btn-check" name="publication" id="btnradio1" autocomplete="off" checked>
-        <label class="btn btn-outline-secondary" for="btnradio1">Нет</label>
-
+    <div class="btn-group w-100" role="group" aria-label="Basic radio toggle button group">
         <input value="True" type="radio" class="btn-check" name="publication" id="btnradio2" autocomplete="off">
         <label class="btn btn-outline-secondary" for="btnradio2">Да</label>
+        
+        <input value="False" type="radio" class="btn-check" name="publication" id="btnradio1" autocomplete="off" checked>
+        <label class="btn btn-outline-secondary" for="btnradio1">Нет</label>
     </div>
 
 {% endif %}
 <br>
 <br>
 <button type="submit" class="btn btn-secondary">{{ button_text }}</button>
-<br>
+<div class="text-secondary text-center" style="font-size: 14px;">Чтобы прикрепить к резюме опыт работы и образование используйте кнопки ниже!!!</div>
+<hr>
+<div class="d-flex justify-content-between">
+    <button id="experience" class="btn btn-secondary w-50 me-2 mb-0" type="button">Добавить опыт работы</button>
+    <button id="education" class="btn btn-secondary w-50 ms-2 mb-0" type="button">Добавить образование</button>
+</div>
 
