--- a/headhunter/app/templates/partials/vacancy/vacancy_form.html
+++ b/headhunter/app/templates/partials/vacancy/vacancy_form.html
@@ -29,14 +29,14 @@
 </div>
 <span class="alert-danger">{{ form.description.errors }}</span>
 <label for="work_experience_from" class="form-label">Опыт работы</label> <span style="color: brown">*</span>
-<div class="d-flex justify-content-around">
-    <div class="mb-3">
+<div class="d-flex justify-content-between">
+    <div class="mb-3 w-100 me-2">
         <label for="work_experience_from" class="form-label">От (лет)</label>
         <input value="{{ form.work_experience_from.value|default:'' }}" type="number" name="work_experience_from"
                class="form-control" id="work_experience_from">
         <span class="alert-danger">{{ form.work_experience_from.errors }}</span>
     </div>
-    <div class="mb-3">
+    <div class="mb-3 w-100 ms-2">
         <label for="work_experience_to" class="form-label">До (лет)</label>
         <input value="{{ form.work_experience_to.value|default:'' }}" type="number" name="work_experience_to"
                class="form-control" id="work_experience_to">
@@ -48,23 +48,22 @@
 </div>
 {% if form.publication.value %}
 
-    <div class="btn-group w-50" role="group" aria-label="Basic radio toggle button group">
-        <input value="False" type="radio" class="btn-check" name="publication" id="btnradio1" autocomplete="off">
-        <label class="btn btn-outline-secondary" for="btnradio1">Нет</label>
-
+    <div class="btn-group w-100" role="group" aria-label="Basic radio toggle button group">
         <input value="True" type="radio" class="btn-check" name="publication" id="btnradio2" autocomplete="off" checked>
         <label class="btn btn-outline-secondary" for="btnradio2">Да</label>
+        
+        <input value="False" type="radio" class="btn-check" name="publication" id="btnradio1" autocomplete="off">
+        <label class="btn btn-outline-secondary" for="btnradio1">Нет</label>
     </div>
 
 {% else %}
 
-    <div class="btn-group w-50" role="group" aria-label="Basic radio toggle button group">
-        <input value="False" type="radio" class="btn-check" name="publication" id="btnradio1" autocomplete="off"
-               checked>
-        <label class="btn btn-outline-secondary" for="btnradio1">Нет</label>
-
+    <div class="btn-group w-100" role="group" aria-label="Basic radio toggle button group">
         <input value="True" type="radio" class="btn-check" name="publication" id="btnradio2" autocomplete="off">
         <label class="btn btn-outline-secondary" for="btnradio2">Да</label>
+        
+        <input value="False" type="radio" class="btn-check" name="publication" id="btnradio1" autocomplete="off" checked>
+        <label class="btn btn-outline-secondary" for="btnradio1">Нет</label>
     </div>
 
 {% endif %}
