--- a/headhunter/app/templates/summary/create_summary.html
+++ b/headhunter/app/templates/summary/create_summary.html
@@ -3,19 +3,19 @@
 
 {% block content %}
     <br>
+    <h1 class="title text-center">Добавить резюме</h1>
     <br>
-    <h1 class="title">Добавить резюме</h1>
-    <br>
-    <br>
-    <div class="row">
-        <div>
-            <form action="{% url 'create_summary' %}" method="post" class="w-50">
-                {% csrf_token %}
-                {% include 'partials/summary/summary_form.html' with button_text='Сохранить' %}
-            </form>
+    <div class="w-75 m-auto p-3">
+        <div class="row">
+            <div>
+                <form action="{% url 'create_summary' %}" method="post" class="w-100">
+                    {% csrf_token %}
+                    {% include 'partials/summary/summary_form.html' with button_text='Сохранить' %}
+                </form>
+            </div>
+            {% include 'partials/summary/work_expirience.html' %}
+            {% include 'partials/summary/education_form.html' %}
         </div>
-        {% include 'partials/summary/work_expirience.html' %}
-        {% include 'partials/summary/education_form.html' %}
     </div>
     <script src="{% static 'js/resume_api_script.js' %}"></script>
 {% endblock %}
