--- a/headhunter/app/templates/summary/detail_summary.html
+++ b/headhunter/app/templates/summary/detail_summary.html
@@ -4,27 +4,27 @@
 {% block content %}
     <br>
     <div>
-        <div style="width: 800px;">
-            <div class="d-flex">
+        <div style="border-radius: 40px" class="card border-secondary p-3 m-auto w-75">
+            <div class="d-flex align-items-center">
                 <div>
-                    {% if summary.user.image %}
-                        <img style="width: 200px; height: 200px" src="{{ summary.user.image.url }}" class="card-img"
-                             alt="...">
+                    {% if user.image %}
+                        <img style="width: 250px; border-radius: 40px; border: 2px solid #8b8b8b;" src="{{ user.image.url }}" class="card-img" alt="...">
                     {% else %}
-                        <img style="width: 200px; height: 200px" src="{% static 'img/user.png' %}" class="card-img"
-                             alt="...">
+                        <img style="width: 250px; border-radius: 40px; border: 2px solid #8b8b8b;" src="{% static 'img/user.png' %}" class="card-img" alt="...">
                     {% endif %}
                 </div>
                 <div class="ms-5">
-                    <h1 class="card-text">{{ summary.username }}</h1>
-                    <div class="mt-3">
-                        <h6 class="text-muted">Контакты</h6>
-                        <div style="font-size: 15px">
+                    <h1 class="card-text">{{ summary.user.username }}</h1>
+                    <hr style="margin: 10px 0 !important;">
+                    <div class="mt-0">
+                        <h6 class="text-muted fs-4">Контактые данные</h6>
+                        <div class="fs-6">
                             <p class="card-text m-0">{{ summary.phone_number }}</p>
                             <p class="card-text">{{ summary.email }}</p>
                         </div>
                     </div>
-                    <h6 class="text-muted mt-4">Возможные способы связи</h6>
+                    <hr style="margin: 10px 0 !important;">
+                    <h6 class="text-muted mt-0">Возможные способы связи</h6>
                     <div class="d-flex">
                         <p class="card-text"><a style="text-decoration: none" href="{{ summary.telegram }}"><img
                                 style="width: 25px; background: none" src="{% static "img/telegram.png" %}"
@@ -49,7 +49,8 @@
                 <div class="d-flex">
                     <div class="d-block w-50">
                         <h4>Желаемая должность</h4>
-                        <h6>{{ summary.summary_position }}</h6>
+                        <h6 class="mb-5">{{ summary.summary_position }}</h6>
+                        <h4>Желаемая зароботная плата</h4>
                         <p class="card-text">{{ summary.salary|intcomma }} &#8376;</p>
                     </div>
                     <div>
