--- a/headhunter/app/templates/common/navbar.html
+++ b/headhunter/app/templates/common/navbar.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="d-flex align-items-center">
                             <a class="nav-link" href="{% url 'user_detail' %}"><img src="{% static 'img/user_icon.png' %}" alt="" style="filter: invert(1); width: 40px;"></a>
-                            <a class="nav-link" id="logoutBtn" href="{% url 'logout' %}">Выйти</a>
+                            <a class="btn btn-outline-light btn-sm" id="logoutBtn" href="{% url 'logout' %}">Выйти</a>
                         </div>
                     </div>
 
