--- a/headhunter/app/templates/common/navbar.html
+++ b/headhunter/app/templates/common/navbar.html
@@ -17,6 +17,7 @@
                             <a class="nav-link" href="{% url 'create_summary' %}">Создать резюме</a>
                             <a class="nav-link" href="{% url 'create_vacancy' %}">Создать вакансию</a>
                             <a class="nav-link" href="{% url 'list_summary' %}">Список резюме</a>
+                            <a class="nav-link" href="{% url 'list_vacancy' %}">Список вакансии</a>
                         </div>
                         <a class="nav-link" href="{% url 'user_detail' %}"><img src="{% static 'img/user_icon.png' %}" alt="" style="filter: invert(1); width: 40px;"></a>
                     </div>
