--- a/headhunter/app/templates/vacancy/list_vacancy.html
+++ b/headhunter/app/templates/vacancy/list_vacancy.html
@@ -26,7 +26,7 @@
             <div>
                 <div class="d-block">
                     <h5>Поиск вакансии</h5>
-                    <form class="w-75" action="{% url 'search' %}">
+                    <form class="w-75" action="{% url 'vacancy_search' %}">
                         <label>
                             <input type="text" class="form-control" name="query">
                         </label>
