--- a/headhunter/app/templates/common/navbar.html
+++ b/headhunter/app/templates/common/navbar.html
@@ -4,7 +4,7 @@
     <div class="container">
         {% if request.user.is_authenticated %}
 
-            <a class="navbar-brand" href="{% url 'user_detail' %}">HeadHunter</a>
+            <a class="navbar-brand" href="{% url 'user_detail' request.user.pk %}">HeadHunter</a>
 
         {% else %}
 
@@ -24,16 +24,15 @@
                             {% if request.user.is_company %}
                                 <a class="nav-link" href="{% url 'create_vacancy' %}">Создать вакансию</a>
                                 <a class="nav-link" href="{% url 'list_summary' %}">Список резюме</a>
-                                <a class="nav-link" href="{% url 'list_summary' %}">Список резюме</a>
-
                             {% else %}
 
                                 <a class="nav-link" href="{% url 'create_summary' %}">Создать резюме</a>
+                                <a class="nav-link" href="{% url 'list_vacancy' %}">Список вакансий</a>
 
                             {% endif %}
                         </div>
                         <div class="d-flex align-items-center">
-                            <a class="nav-link" href="{% url 'user_detail' %}"><img src="{% static 'img/user_icon.png' %}" alt="" style="filter: invert(1); width: 40px;"></a>
+                            <a class="nav-link" href="{% url 'user_detail' request.user.pk %}"><img src="{% static 'img/user_icon.png' %}" alt="" style="filter: invert(1); width: 40px;"></a>
                             <a class="btn btn-outline-light btn-sm" id="logoutBtn" href="{% url 'logout' %}">Выйти</a>
                         </div>
                     </div>
