--- a/headhunter/app/templates/partials/summary/list_summary.html
+++ b/headhunter/app/templates/partials/summary/list_summary.html
@@ -1,18 +1,34 @@
 <h1 style="text-align: center">{{ title_text }}</h1>
-<div>
-    {% for summary in summaries %}
-        <div class="col mt-4">
-            <div class="card border-secondary p-1" style="border-radius: 20px;">
-                <div class="card-body">
-                    <h5 class="card-title">{{ summary.summary_position }}</h5>
-                    <p class="card-text">{{ summary.updated_at }}</p>
-                    {% if request.user == summary.user %}
-                        <a class="btn btn-secondary" href="#">Обновить</a>
-                        <a class="btn btn-secondary" href="#">Редактировать</a>
-                        <a class="btn btn-secondary" href="{% url 'detail_summary' summary.pk %}">Просмотр</a>
-                    {% endif %}
+<div class="d-flex justify-content-between">
+    <div class="w-75">
+        {% for summary in summaries %}
+            <a href="{% url 'detail_summary' summary.pk %}" style="text-decoration: none; color: black;" class="d-block summary-link">
+                <div class="col mt-4">
+                    <div class="card border-secondary p-1" style="border-radius: 20px;">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ summary.summary_position }}</h5>
+                            <p class="card-text">{{ summary.updated_at }}</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    {% endfor %}
+            </a>    
+        {% endfor %}
+    </div>
+    <div class="ps-5">
+        <h5>Поиск вакансии</h5>
+        <form action="{% url 'summary_search' %}">
+            <label>
+                <input type="text" class="form-control" name="query">
+            </label>
+            <button class="btn btn-secondary mt-2">Найти</button>
+        </form>
+        <h5 class="mt-4">Фильтр по категориям</h5>
+        <ul class="m-0 p-0">
+            {% for category in categories %}
+                <li style="list-style-type: none">
+                    <a style="text-decoration: none" href="{% url 'vacancy_category' category.0 %}">{{ category.1 }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
 </div>
