Вывел ошибки при не валидной форме опыта работы и образования

--- a/headhunter/app/templates/partials/summary/work_expirience.html
+++ b/headhunter/app/templates/partials/summary/work_expirience.html
@@ -8,25 +8,30 @@
             <label for="company_name" class="form-label">Название компании</label> <span style="color: brown">*</span>
             <input name="company_name" type="text"
             id="company_name" class="form-control"/>
+            <div class="form-text text-danger work-experience-text"></div>
         </div>
         <div class="mb-3">
             <label for="work_position" class="form-label">Должность</label> <span style="color: brown">*</span>
             <input name="work_position" type="text"
                    id="work_position" class="form-control"/>
+            <div class="form-text text-danger work-experience-text"></div>
         </div>
         <div class="mb-3">
             <label for="responsibilities" class="form-label">Обязанности</label> <span style="color: brown">*</span>
             <textarea name="responsibilities" class="form-control" id="responsibilities" rows="3"></textarea>
+            <div class="form-text text-danger work-experience-text"></div>
         </div>
         <div class="mb-3">
             <label for="start_work" class="form-label">Дата начала</label> <span style="color: brown">*</span>
             <input name="start_work" type="date"
                    id="start_work" class="form-control"/>
+            <div class="form-text text-danger work-experience-text"></div>
         </div>
         <div class="mb-3">
             <label for="finish_work" class="form-label">Дата окончания</label>
             <input name="finish_work" type="date"
                    id="finish_work" class="form-control"/>
+            <div class="form-text text-danger work-experience-text"></div>
         </div>
         <br>
         <button id="work_experience_btn" class="btn btn-secondary" type="submit">Добавить</button>
