--- a/headhunter/app/templates/vacancy/detail_vacancy.html
+++ b/headhunter/app/templates/vacancy/detail_vacancy.html
@@ -8,13 +8,22 @@
             <div class="d-flex align-items-center">
                 <div>
                     {% if vacancy.user.image %}
-                        <img style="width: 200px; border-radius: 40px; border: 2px solid #8b8b8b;" src="{{ vacancy.user.image.url }}" class="card-img" alt="...">
+                        <img style="width: 200px; border-radius: 40px; border: 2px solid #8b8b8b;"
+                             src="{{ vacancy.user.image.url }}" class="card-img" alt="...">
                     {% else %}
-                        <img style="width: 200px; border-radius: 40px; border: 2px solid #8b8b8b;" src="{% static 'img/user.png' %}" class="card-img" alt="...">
+                        <img style="width: 200px; border-radius: 40px; border: 2px solid #8b8b8b;"
+                             src="{% static 'img/user.png' %}" class="card-img" alt="...">
                     {% endif %}
                 </div>
                 <div class="ms-5">
-                    <a href="{% url 'user_detail' vacancy.user.pk %}"><h1 class="card-text">{{ vacancy.user.username }}</h1></a>
+                    <div class="d-flex">
+                        <a href="{% url 'user_detail' vacancy.user.pk %}"><h1
+                                class="card-text">{{ vacancy.user.username }}</h1></a>
+                        <div class="d-flex mt-3 ms-5">
+                            <p>Последнее обновление</p>
+                            <p id="update_date" class="ms-2">{{ vacancy.updated_at|date:'d.m.Y, G:i' }}</p>
+                        </div>
+                    </div>
                     <hr style="margin: 10px 0 !important;">
                     <div class="mt-0">
                         <h6 class="text-muted fs-4">Контактые данные</h6>
@@ -28,8 +37,10 @@
                         <a type="button" href="#" class="btn btn-secondary btn-sm">Отклинуться</a>
                         {% if request.user == vacancy.user %}
 
-                            <a type="button" href="#" class="btn btn-secondary btn-sm">Обновить</a>
-                            <a type="button" href="#" class="btn btn-secondary btn-sm">Редактировать</a>
+                            <a data-vacancy-id="{{ vacancy.pk }}" data-position="{{ vacancy.vacancy_position }}"
+                               id="button_update" type="button" class="btn btn-secondary btn-sm">Обновить</a>
+                            <a type="button" href="{% url 'update_vacancy' vacancy.pk %}"
+                               class="btn btn-secondary btn-sm">Редактировать</a>
 
                         {% endif %}
                     </div>
@@ -80,4 +91,5 @@
             </div>
         </div>
     </div>
+    <script src="{% static 'js/update_vacancy.js' %}"></script>
 {% endblock %}
